--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-fbsdk-next": "^6.2.0",
+    "react-native-paper": "^4.11.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
