--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
